--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-display": "^1.0.8",
+    "react-native-search-box": "0.0.19",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
