--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-display": "^1.0.8",
+    "react-native-modal-dropdown": "^0.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
