--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-modal-dropdown": "^0.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
