--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "art": "^0.10.3",
     "axios": "^0.18.0",
+    "d3": "^5.7.0",
+    "d3-shape": "^1.2.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-charts-wrapper": "^0.4.5",
     "react-native-display": "^1.0.8",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "rnpm": "^1.9.0",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
