--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-display": "^1.0.8",
+    "react-native-git-upgrade": "^0.2.7",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-motion": "^0.2.0",
+    "react-native-navigation": "^1.1.485",
     "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
