--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'crypto'
 
 include ':app'
+
+nclude ':react-native-navigation'
+project(':react-native-navigation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation/lib/android/app/')
