--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'crypto'
 
 include ':app'
 
-nclude ':react-native-navigation'
+include ':react-native-navigation'
 project(':react-native-navigation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation/lib/android/app/')
