react-native upgrade

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
-        google()
-        mavenLocal()
-        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-       classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,20 +19,21 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        mavenCentral()
-        google()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
 ext {
-    buildToolsVersion = "27.0.3"
-    minSdkVersion = 19
+    buildToolsVersion = "26.0.3"
+    minSdkVersion = 16
     compileSdkVersion = 26
     targetSdkVersion = 26
     supportLibVersion = "26.1.0"
