--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-display": "^1.0.8",
     "react-native-git-upgrade": "^0.2.7",
     "react-native-highcharts": "^1.0.2",
+    "react-native-loading-placeholder": "0.0.6",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-motion": "^0.2.0",
     "react-native-navigation": "^1.1.485",
