--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-git-upgrade": "^0.2.7",
     "react-native-highcharts": "^1.0.2",
     "react-native-loading-placeholder": "0.0.6",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-motion": "^0.2.0",
     "react-native-navigation": "^1.1.485",
