--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-motion": "^0.2.0",
     "react-native-navigation": "^1.1.485",
     "react-native-svg": "^6.5.2",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
