News component complete, reducer, action and navigation done for exchange

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-native-motion": "^0.2.0",
     "react-native-navigation": "^1.1.485",
     "react-native-svg": "^6.5.2",
+    "react-native-swipe-gestures": "^1.0.2",
+    "react-native-swiper": "^1.5.13",
+    "react-native-swiper-flatlist": "^1.0.8",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
