--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-motion": "^0.2.0",
     "react-native-navigation": "^1.1.485",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-svg": "^6.5.2",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-swiper": "^1.5.13",
