--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,8 +101,8 @@ android {
         applicationId "com.spaceyficrypto.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 4
-        versionName "4.0"
+        versionCode 5
+        versionName "5.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -150,7 +150,7 @@ android {
 dependencies {
     compile project(':react-native-splash-screen')
     compile project(':react-native-navigation')
-    compile project(':react-native-linear-gradient')
+    // compile project(':react-native-linear-gradient')
     compile project(':react-native-vector-icons')
     compile project(':react-native-svg')
     compile fileTree(dir: "libs", include: ["*.jar"])
